--- a/view/theme/quattro/quattro.less
+++ b/view/theme/quattro/quattro.less
@@ -87,6 +87,10 @@ code {
 
 
 /* popup notifications */
+#jGrowl.top-right {
+	top: 30px;
+	right: 15px;
+}
 div.jGrowl div.notice {
 	background: @NoticeBackgroundColor url("../../../images/icons/48/notice.png") no-repeat 5px center;
 	color: 	@NoticeColor;
@@ -270,7 +274,7 @@ ul.menu-popup {
 
 
 
-/* aside */
+/* aside 230px*/
 aside { 
 	display: table-cell;
 	vertical-align: top;
@@ -403,11 +407,11 @@ aside {
 }
 
 
-/* section */
+/* section 800px */
 section { 
 	display: table-cell;
 	vertical-align: top;
-	width: 800px;
+	width: 770px;
 	padding:0px 20px 0px 10px;
 }
 
@@ -417,14 +421,14 @@ section {
 	position: relative;
 	padding: 10px;
 	margin-bottom: 20px;
-	width: 780px;
+	width: 750px;
 }
 .wall-item-decor { position: absolute; left: 97%; top: -10px;  width: 16px;}
 .unstarred { display: none; }
 
 .wall-item-container {
 	display: table;
-	width: 780px;
+	width: 750px;
 	
 	.wall-item-item,
 	.wall-item-bottom { display: table-row; }
@@ -478,19 +482,35 @@ section {
 
 
 .wall-item-container.comment {
-	/*margin-top: 50px;*/
-	.contact-photo { width: 32px; height: 32px; margin-left: 16px;
-		/*background: url(../../../images/icons/22/user.png) no-repeat center center;*/
+	.contact-photo-wrapper { margin-left: 16px; }
+	.contact-photo { 
+		width: 32px; height: 32px; 
+	}	
+	.contact-photo-menu-button {
+		top: 15px !important;
+		left: 0px !important;
+	}
+	.wall-item-links { padding-left: 12px; }
+}
+
+/* 'tag' item type */
+.wall-item-container.item-tag {
+	.wall-item-content {
+		.opaque(0.5);
+	}
+	.contact-photo-wrapper { margin-left: 32px; }
+	.contact-photo { 
+		width: 16px; height: 16px;
 	}	
 	.contact-photo-menu-button {
 		top: 15px !important;
 		left: 15px !important;
 	}
-	.wall-item-links { padding-left: 12px; }
 }
 
+
 .wall-item-comment-wrapper {
-	margin: 30px 2em 2em 60px;
+	margin: 1em 2em 1em 60px;
 	.comment-edit-photo { display: none; }
 	textarea {	
 		height: 1em; width: 100%; font-size: 10px;
@@ -522,13 +542,12 @@ section {
 
 	.wall-item-container { width: 700px; }
 	.tread-wrapper { width: 700px; padding: 0; margin: 10px 0;}
-
-
 }
 
 .shiny { border-right:10px solid @ShinyBorderColor; }
 #jot-preview-content .tread-wrapper { background-color: @JotPreviewBackgroundColor; }
 
+.hide-comments-outer {margin-bottom: 0.8em; }
 
 .wall-item-tags { padding-top: 5px; }
 .tag {
@@ -638,7 +657,7 @@ section {
 	#jot-tools {
 		margin: 0px; padding: 0px;
 		height: 40px; overflow: none;
-		width: 800px;
+		width: 770px;
 		background-color: @JotToolsBackgroundColor;
 		border-bottom: 2px solid @JotToolsBorderColor;
 		li {
@@ -710,7 +729,7 @@ section {
 		border: 0px;
 		margin: 0px;
 		height: 20px;
-		width: 700px;
+		width: 500px;
 		font-weight: bold;
 		border: 1px solid @BodyBackground;
 
@@ -727,14 +746,23 @@ section {
 	}
 	
 	#character-counter {
-		width: 80px;
+		width: 40px;
 		float: right;
 		text-align: right;
 		height: 20px;
 		line-height: 20px;
 		padding-right: 20px;
 	}
-
+	
+	#jot-category {
+		border: 0px;
+		margin: 0px;
+		height: 20px;
+		width: 200px;
+		border: 1px solid @BodyBackground;
+		&:hover { border: 1px solid @CommentBoxEmptyBorderColor }
+		&:focus { border: 1px solid @CommentBoxEmptyBorderColor }
+	}
 }
 
 
